@@ -75,16 +75,11 @@ public class RemoteFilesStorage extends BaseFilesStorage {
     return result;
   }
 
-  public void downloadObject(String objectToGet, String fileToSave) throws IOException, InvalidKeyException,
-    InvalidResponseException, InsufficientDataException, NoSuchAlgorithmException, ServerException,
-    InternalException, XmlParserException, ErrorResponseException {
-    localFilesStorage.write(fileToSave, client.getObject(GetObjectArgs.builder().bucket(bucket).object(objectToGet).build()).readAllBytes());
-  }
-
   public boolean containsFile(String fileName)
     throws ServerException, InsufficientDataException, ErrorResponseException, IOException, NoSuchAlgorithmException,
     InvalidKeyException, InvalidResponseException, XmlParserException, InternalException {
-    for (Result<Item> itemResult : client.listObjects(ListObjectsArgs.builder().bucket(bucket).prefix(fileName).build())) {
+    fileName = getS3Path(fileName);
+    for (Result<Item> itemResult : client.listObjects(ListObjectsArgs.builder().bucket(bucket).prefix(getS3Path(fileName)).build())) {
       if (fileName.equals(itemResult.get().objectName())) {
         return true;
       }
@@ -97,7 +92,7 @@ public class RemoteFilesStorage extends BaseFilesStorage {
       throws IOException, InvalidKeyException, InvalidResponseException, InsufficientDataException, NoSuchAlgorithmException,
       ServerException, InternalException, XmlParserException, ErrorResponseException {
     List<ComposeSource> sources = sourceObjects.stream()
-        .map(so -> ComposeSource.builder().bucket(bucket).object(so).build())
+        .map(so -> ComposeSource.builder().bucket(bucket).object(getS3Path(so)).build())
         .collect(Collectors.toList());
     log.info("Composing object {},sources [{}],downloadFilename {},contentType {}.", destObject,
         sources.stream().map(s -> String.format("bucket %s,object %s", s.bucket(), s.object())).collect(Collectors.joining(",")),
@@ -114,7 +109,7 @@ public class RemoteFilesStorage extends BaseFilesStorage {
     log.info("Deleting objects [{}].", StringUtils.join(objects, ","));
     return client.removeObjects(RemoveObjectsArgs.builder()
         .bucket(bucket)
-        .objects(objects.stream().map(DeleteObject::new).collect(Collectors.toList()))
+        .objects(objects.stream().map(this::getS3Path).map(DeleteObject::new).toList())
         .build());
   }
 
